@@ -4,11 +4,10 @@ import com.ems.dtos.CandidateByPartyDTO;
 import com.ems.dtos.CandidateDTO;
 import com.ems.dtos.CandidatePageResponse;
 import com.ems.entities.Candidate;
-import com.ems.entities.CandidateName;
 import com.ems.exceptions.CandidateAlreadyExistsException;
-
+import com.ems.entities.CandidateName;
 import com.ems.entities.Election;
-
+import com.ems.exceptions.CandidateAlreadyExistsException;
 import com.ems.exceptions.CandidateNotFoundException;
 import com.ems.exceptions.ElectionNotFoundException;
 import com.ems.exceptions.PartyNotFoundException;
@@ -17,51 +16,80 @@ import com.ems.repositories.CandidateRepository;
 import com.ems.repositories.ElectionRepository;
 import com.ems.repositories.PartyRepository;
 import com.ems.services.CandidateService;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.List;
-import java.util.Optional;
+import java.util.UUID;
+import org.springframework.data.domain.Sort;
+import org.springframework.web.multipart.MultipartFile;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.springframework.data.domain.Sort;
+
+@Slf4j
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class CandidateServiceImpl implements CandidateService {
     private final CandidateRepository candidateRepository;
     private final CandidateMapper candidateMapper;
     private final ElectionRepository electionRepository;
     private final PartyRepository partyRepository;
+    private final ObjectMapper objectMapper;
+    @Value("${file.upload-dir}")
+    private String uploadDir;
 
     @Override
     public CandidateDTO findByCandidateSSN(String candidateSSN) {
         return candidateRepository.findByCandidateSSN(candidateSSN)
                 .map(candidateMapper::toCandidateDTO)
-                .orElseThrow(() -> new CandidateNotFoundException("No Candidate is found with the SSN: " + candidateSSN));
+                .orElseThrow(() -> new CandidateNotFoundException("No Candidate found with SSN: " + candidateSSN));
     }
 
     @Override
-    public Candidate saveCandidate(@Valid CandidateDTO candidateDTO) {
-
+    @Transactional
+    public Candidate saveCandidate(String candidateData, MultipartFile candidateImage, MultipartFile candidateSignature) throws IOException {
+        CandidateDTO candidateDTO=objectMapper.readValue(candidateData, CandidateDTO.class);
         if (candidateRepository.findByCandidateSSN(candidateDTO.getCandidateSSN()).isPresent()) {
             throw new CandidateAlreadyExistsException("Candidate with SSN " + candidateDTO.getCandidateSSN() + " already exists.");
         }
+        Path candidateImagePath=Path.of(uploadDir,"candidateImage");
+        Path candidateSignaturePath=Path.of(uploadDir,"candidateSignature");
+        Files.createDirectories(candidateImagePath);
+        Files.createDirectories(candidateSignaturePath);
 
         var candidate = candidateMapper.toCandidate(candidateDTO);
         var election = electionRepository.findById(candidateDTO.getElectionId())
                 .orElseThrow(() -> new ElectionNotFoundException("Election not found with ID: " + candidateDTO.getElectionId()));
         var party = partyRepository.findById(candidateDTO.getPartyId())
                 .orElseThrow(() -> new PartyNotFoundException("Party not found with ID: " + candidateDTO.getPartyId()));
-
         candidate.setElection(election);
         candidate.setParty(party);
-
+        if (candidateImage != null && !candidateImage.isEmpty()) {
+            String imageFileName = UUID.randomUUID() + "_" + candidateImage.getOriginalFilename(); // Unique filename
+            Path imagePath = candidateImagePath.resolve(imageFileName);
+            Files.copy(candidateImage.getInputStream(), imagePath, StandardCopyOption.REPLACE_EXISTING);
+            candidate.setCandidateImage(imageFileName);
+        }
+        if (candidateSignature != null && !candidateSignature.isEmpty()) {
+            String signatureFileName = UUID.randomUUID() + "_" + candidateSignature.getOriginalFilename(); // Unique filename
+            Path signaturePath = candidateSignaturePath.resolve(signatureFileName);
+            Files.copy(candidateSignature.getInputStream(), signaturePath, StandardCopyOption.REPLACE_EXISTING);
+            candidate.setCandidateSignature(signatureFileName);
+        }
         var residentialAddress = candidateDTO.getResidentialAddress();
         var mailingAddress = residentialAddress.equals(candidateDTO.getMailingAddress())
                 ? residentialAddress
@@ -73,12 +101,11 @@ public class CandidateServiceImpl implements CandidateService {
         return candidateRepository.save(candidate);
     }
 
-
     @Override
     public CandidateDTO findById(Long candidateId) {
-       return candidateRepository.findById(candidateId)
-               .map(candidateMapper::toCandidateDTO)
-               .orElseThrow(()->new CandidateNotFoundException("No Such candidate with id"+candidateId));
+        return candidateRepository.findById(candidateId)
+                .map(candidateMapper::toCandidateDTO)
+                .orElseThrow(() -> new CandidateNotFoundException("No Such candidate with id: " + candidateId));
     }
 
     @Override
@@ -105,23 +132,23 @@ public class CandidateServiceImpl implements CandidateService {
 
     @Override
     public List<CandidateByPartyDTO> findByPartyName(String candidatePartyName) {
-        List<Candidate> candidates=candidateRepository.findByParty_PartyName(candidatePartyName);
+        List<Candidate> candidates = candidateRepository.findByParty_PartyName(candidatePartyName);
 
-        if(candidates.isEmpty()){
-            throw new PartyNotFoundException("Party with given name not found");
+        if (candidates.isEmpty()) {
+            throw new PartyNotFoundException("Party with the given name not found.");
         }
+
         return candidates.stream()
                 .map(candidateMapper::toCandidateByPartyDTO)
-                .toList();
-
+                .collect(Collectors.toList());
     }
 
     @Override
-
     public List<CandidateDTO> findAll() {
         return candidateRepository.findAll()
-                .stream().map(candidateMapper::toCandidateDTO)
-                .toList();
+                .stream()
+                .map(candidateMapper::toCandidateDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -129,6 +156,7 @@ public class CandidateServiceImpl implements CandidateService {
         candidateRepository.deleteById(candidateId);
     }
 
+    @Override
     public Page<CandidateDTO> getPagedCandidate(int page, int perPage, Sort sort) {
         Pageable pageable = PageRequest.of(page, perPage, sort);
         Page<Candidate> candidatePage = candidateRepository.findAll(pageable);
@@ -137,22 +165,16 @@ public class CandidateServiceImpl implements CandidateService {
 
     @Override
     public CandidatePageResponse getCandidateByElectionId(Long electionId, int page, int perPage) {
-        // Check if election exists
         Election election = electionRepository.findById(electionId)
                 .orElseThrow(() -> new ElectionNotFoundException("Election not found with ID: " + electionId));
-
         Pageable pageable = PageRequest.of(page, perPage);
-
-        // Fetch paged candidates
         Page<Candidate> candidatePage = candidateRepository.findByElection_electionId(electionId, pageable);
 
         if (candidatePage.isEmpty()) {
             throw new CandidateNotFoundException("No candidates found for Election ID: " + electionId);
         }
 
-        // Convert entities to DTOs
         Page<CandidateDTO> candidateDTOPage = candidatePage.map(candidateMapper::toCandidateDTO);
-
         return new CandidatePageResponse(
                 candidateDTOPage.getContent(),
                 candidateDTOPage.getNumber(),
@@ -166,9 +188,3 @@ public class CandidateServiceImpl implements CandidateService {
 
 
 }
-
-
-
-
-
-
